[package]
name = "page-caspaxos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
futures = "0.3.29"
log = "0.4.20"
pin-project-lite = "0.2.13"
rand = { version = "0.8.5", features = ["small_rng"] }
scoped-tls = "1.0.1"
serde = "1.0.193"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["time", "rt", "sync", "test-util"] }

[dev-dependencies]
env_logger = "0.10.1"
tokio = { version = "1.34.0", features = ["full", "test-util"] }
